# MatriXMiX

./: .gitignore  Makefile  MatriXMiX.pro  README.md  README.txt
src/: AbstractOperationWidget.cpp  AbstractOperationWidget.h  AddMatrixWidget.cpp  AddMatrixWidget.h  AdditionWindow.cpp  AdditionWindow.h  BinaryOpMatrixMatrixWidget.cpp  BinaryOpMatrixMatrixWidget.h  BinaryOpMatrixNumberWidget.cpp  BinaryOpMatrixNumberWidget.h  BinaryOpWindow.cpp  BinaryOpWindow.h  CMakeLists.txt  DeterminantWindow.cpp  DeterminantWindow.h  DiagonalisationWidget.cpp  DiagonalisationWidget.h  DiagonalisationWindow.cpp  DiagonalisationWindow.h  DivisionWindow.cpp  DivisionWindow.h  EigenWindow.cpp  EigenWindow.h  Error.cpp  Error.h  ExprEvalWidget.cpp  ExprEvalWidget.h  ExprEvalWindow.cpp  ExprEvalWindow.h  Fraction.cpp  Fraction.h  Gauss.cpp  Gauss.h  HelpWindow.cpp  HelpWindow.h  HelpWindowQt.cpp  HelpWindowQt.h  InverseWindow.cpp  InverseWindow.h  KerImgDimWindow.cpp  (+45 more)
src/maths/: Fraction.cpp  Fraction.h  Gauss.cpp  Gauss.h  Matrix.cpp  Matrix.h  MatrixLibrary.cpp  MatrixLibrary.h  Polynomial.cpp  Polynomial.h  Utils.cpp  Utils.hpp  VectorX.cpp  VectorX.h  main.cpp  qmatrixlibrary.cpp
src/qt/: AbstractOperationWidget.cpp  AbstractOperationWidget.h  BinaryOpMatrixMatrixWidget.cpp  BinaryOpMatrixMatrixWidget.h  BinaryOpMatrixNumberWidget.cpp  BinaryOpMatrixNumberWidget.h  DecompositionWidget.cpp  DecompositionWidget.h  DiagonalisationWidget.cpp  DiagonalisationWidget.h  DivisionWindow.cpp  Error.cpp  Error.h  ExprEvalWidget.cpp  ExprEvalWidget.h  ExprLineEdit.cpp  ExprLineEdit.hpp  (+33 more)
(+17 files in other folders)
